# otus_python_basic

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: README.md  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh
homework_03/main/: __init__.py  api.py  app.py
homework_04/: __init__.py  jsonplaceholder_requests.py  main.py  models.py  pyproject.toml  requirements.txt
homework_05/: __init__.py  app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: .env.example  Makefile  README  docker-compose.yml  pyproject.toml
homework_06/.docker/: Dockerfile  start.sh  uwsgi.ini
homework_06/app/: app.py  main.py
homework_06/app/templates/: index.html
