[tool.poetry]
name = "main"
version = "0.1.0"
description = "homework3"
authors = ["Кузнецов Даниил <den@webpp.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
