[tool.poetry]
name = "main"
version = "0.1.0"
description = "homework 4"
authors = ["Кузнецов Даниил <den@webpp.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
SQLAlchemy = "^2.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
