[tool.poetry]
name = "app"
version = "0.1.0"
description = "homework 6"
authors = ["Кузнецов Даниил <den@webpp.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.*"
SQLAlchemy = "2.0.*"
gunicorn = "20.1.*"
alembic = "1.10.*"
flask = "2.3.*"
Flask-Migrate = "^4.0.4"
Flask-SQLAlchemy = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"